[package]
name = "monitor-control-win"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
const_fn_assert = "0.1.2"
derivative = "2.2.0"
thiserror = "1.0.24"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
    "errhandlingapi", "winuser", "winreg", "winerror", "setupapi", "impl-default", "impl-debug",
    "guiddef", "handleapi", "physicalmonitorenumerationapi"
]

[dev-dependencies]
approx = "0.4.0"
