[package]
name = "monitor-control-win"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
description = "Control monitors on Windows (WIP, currently read-only)"
license = "MIT"
repository = "https://github.com/danielzfranklin/monitor-control-win"
keywords = ["windows", "monitor", "display"]
categories = ["os::windows-apis"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.5"
registry = "1.1.0"
thiserror = "1.0.24"
tracing = "0.1.25"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
    "errhandlingapi", "winuser", "winreg", "winerror", "setupapi", "impl-default", "impl-debug",
    "guiddef", "handleapi", "physicalmonitorenumerationapi"
]

[dev-dependencies]
winit = "0.24.0"
